@@ -10,6 +10,7 @@ lib/WWW/Search/Ebay.pm
 lib/WWW/Search/Ebay/Auctions.pm
 lib/WWW/Search/Ebay/BuyItNow.pm
 lib/WWW/Search/Ebay/ByEndDate.pm
+lib/WWW/Search/Ebay/BySellerID.pm
 lib/WWW/Search/Ebay/Motors.pm
 lib/WWW/Search/Ebay/Stores.pm
 lib/WWW/Search/Ebay/UK.pm
@@ -18,6 +19,7 @@ MANIFEST			This list of files
 README
 t/basic.t
 t/buyitnow.t
+t/bysellerid.t
 t/enddate.t
 t/itemnumber.t
 t/motors.t
