@@ -1,6 +1,6 @@
 #line 1 "inc/Module/Install.pm - c:/perl/site/lib/Module/Install.pm"
 package Module::Install;
-$VERSION = '0.36';
+$VERSION = '0.37';
 
 die << "." unless $INC{join('/', inc => split(/::/, __PACKAGE__)).'.pm'};
 Please invoke ${\__PACKAGE__} with:
