@@ -1,55 +1,56 @@
-
-# $Id: buyitnow.t,v 1.3 2004/10/21 11:35:24 Daddy Exp $
-
-use ExtUtils::testlib;
-use Test::More no_plan;
-
-BEGIN { use_ok('WWW::Search') };
-BEGIN { use_ok('WWW::Search::Test') };
-BEGIN { use_ok('WWW::Search::Ebay::BuyItNow') };
-
-my $iDebug;
-my $iDump = 0;
-
-&tm_new_engine('Ebay::BuyItNow');
-# goto DEBUG_NOW;
-# goto CONTENTS;
-
-diag("Sending 0-page query...");
-$iDebug = 0;
-# This test returns no results (but we should not get an HTTP error):
-&tm_run_test('normal', $WWW::Search::Test::bogus_query, 0, 0, $iDebug);
-
-# DEBUG_NOW:
-;
-MULTI_RESULT:
-diag("Sending multi-page query...");
-$iDebug = 0;
-$iDump = 0;
-# This query returns hundreds of pages of results:
-&tm_run_test('normal', 'LEGO', 101, undef, $iDebug);
-
-CONTENTS:
-diag("Sending 1-page query to check contents...");
-$iDebug = 0;
-$iDump = 0;
-&tm_run_test('normal', 'Trinidad Tobago flag', 1, 99, $iDebug, $iDump);
-# Now get the results and inspect them:
-my @ao = $WWW::Search::Test::oSearch->results();
-cmp_ok(0, '<', scalar(@ao), 'got some results');
-foreach my $oResult (@ao)
-  {
-  like($oResult->url, qr{\Ahttp://cgi\d*\.ebay\.com},
-       'result URL is really from ebay.com');
-  cmp_ok($oResult->title, 'ne', '',
-         'result Title is not empty');
-  cmp_ok($oResult->change_date, 'ne', '',
-         'result date is not empty');
-  like($oResult->description, qr{no\s+bids;},
-       'result bid count is ok');
-  like($oResult->description, qr{starting\sbid},
-       'result bid amount is ok');
-  } # foreach
-
-
-__END__
+
+# $Id: buyitnow.t,v 1.4 2005/08/14 21:45:45 Daddy Exp $
+
+use ExtUtils::testlib;
+use Test::More no_plan;
+
+BEGIN { use_ok('WWW::Search') };
+BEGIN { use_ok('WWW::Search::Test') };
+BEGIN { use_ok('WWW::Search::Ebay::BuyItNow') };
+
+my $iDebug;
+my $iDump = 0;
+
+&tm_new_engine('Ebay::BuyItNow');
+# goto DEBUG_NOW;
+# goto CONTENTS;
+
+diag("Sending 0-page query...");
+$iDebug = 0;
+# This test returns no results (but we should not get an HTTP error):
+&tm_run_test('normal', $WWW::Search::Test::bogus_query, 0, 0, $iDebug);
+
+# DEBUG_NOW:
+;
+MULTI_RESULT:
+diag("Sending multi-page query...");
+$iDebug = 0;
+$iDump = 0;
+# This query returns hundreds of pages of results:
+&tm_run_test('normal', 'LEGO', 101, undef, $iDebug);
+
+CONTENTS:
+diag("Sending 1-page query to check contents...");
+$iDebug = 0;
+$iDump = 0;
+&tm_run_test('normal', 'Trinidad Tobago flag', 1, 99, $iDebug, $iDump);
+# Now get the results and inspect them:
+my @ao = $WWW::Search::Test::oSearch->results();
+cmp_ok(0, '<', scalar(@ao), 'got some results');
+foreach my $oResult (@ao)
+  {
+  like($oResult->url, qr{\Ahttp://cgi\d*\.ebay\.com},
+       'result URL is really from ebay.com');
+  cmp_ok($oResult->title, 'ne', '',
+         'result Title is not empty');
+  cmp_ok($oResult->change_date, 'ne', '',
+         'result date is not empty');
+  like($oResult->description, qr{no\s+bids;},
+       'result bid count is ok');
+  like($oResult->description, qr{starting\sbid},
+       'result bid amount is ok');
+  } # foreach
+
+
+__END__
+
